# crab_game

./: .gitignore  Cargo.toml  docker-compose.yaml  docker-compose.yml  package.json
assets/: Crab1.blend  Crab1.blend1  water_shader.wgsl
assets/models/: Crab1.glb
deploy/: deploy.bat  remoteDeploy.sh
src/: audio.rs  bullet.rs  combat_ui.rs  crab.rs  dev_tools.rs  loading.rs  main.rs  main_menu.rs  player.rs  scenes.rs  state.rs  target.rs  tower.rs  ui.rs
