[package]
name = "crab_game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy-inspector-egui = { version = "0.25.0", features = ["bevy_pbr", "bevy_render"], default-features = false }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
bevy_asset_loader = "0.21"

[dependencies.bevy] 
version = "0.14.0" 
default-features = true

[dependencies.bevy_kira_audio]
version = "0.20"
default-features = false
features = [
    "mp3"
]
